some channel stuff, rearranged some code and fix the order of things and removed the extra perm check
Took 35 minutes

removed some singleton, deleted MinecraftColorCodedWord...didn't even remember I had that, fixed PlayerJoinLeave event message not having color, guess who managed to mess up default config

Took 1 hour 12 minutes

better and actually works way of removing the reader who don't have permission

Took 4 minutes

stupid me thinking I was smarter than my past self,

Took 36 seconds

forgot the replacing logic for config

Took 18 seconds

sometime error have no message, use toString instead

Took 45 seconds

moved ElementProcessor holder from Message to MsgAdaptor, no more possible null getEP()

Took 1 hour 12 minutes

rewrite config system and some minor fixes

Took 4 minutes

why did I use weird regex there .-.

Took 15 minutes

rewrite config system and some minor fixes

Took 3 minutes

that s -> str refactor still haunt me to this day

Took 2 minutes

removed debug msg

Took 21 seconds

that s -> str refactor still haunt me to this day

Took 42 seconds

removed tag cause that was a stupid idea

Took 41 minutes

adding reflections for config loading without registering

Took 1 hour 7 minutes

Changing config structure

Took 1 hour 0 minutes

added nestedCache method

Took 1 hour 18 minutes

relocate + rename config

Took 8 minutes

add null check for channel

Took 12 minutes

removed singleton

Took 33 seconds

removed singleton

Took 21 seconds

added more useful info for discord

Took 28 seconds

added uptime

Took 1 hour 10 minutes

rename + changed indentation

Took 49 seconds

added discord event register

Took 2 minutes

removed pointless singleton

Took 43 seconds

removed pointless singleton

Took 3 minutes

added

Took 1 minute

moved

Took 9 minutes